# online-mart

ecommerce-with-kafka/: compose.yml
ecommerce-with-kafka/inventory_service/: pyproject.toml
ecommerce-with-kafka/user_service/: .env  .env.example  pyproject.toml
ecommerce-with-kafka/user_service/app/controllers/: crud_user.py
notification_service/: pyproject.toml
order_service/: pyproject.toml
payment_service/: pyproject.toml
product_service/: pyproject.toml
user_service/: pyproject.toml
user_service/app/db/: db_connector.py
user_service/app/models/: user_models.py
user_service/app/routes/: user_routes.py
