[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Umar Hayyat <umarhayyat71.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
aiokafka = "^0.11.0"
sqlmodel = "^0.0.19"
psycopg = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
